--- a/infra/k8s/posts-depl.yaml
+++ b/infra/k8s/posts-depl.yaml
@@ -15,3 +15,18 @@ spec:
       containers:
         - name: posts
           image: sooraj009/posts
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: posts-clusterip-srv
+spec:
+  selector:
+    app: posts
+  ports:
+    - name: posts
+      protocol: TCP
+      port: 4000
+      targetPort: 4000
